2001-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/Makefile.am: define EXULT_DATADIR when compiling exult_studio
	* mapedit/studio.cc: look for glade file in xmldir, EXULT_DATADIR and
	current dir before giving up

2001-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: GIMP_PLUGIN_PREFIX needs a /plug-ins appended to it
	* exult.spec.in: implement subpackages for exult-tools, exult-studio,
	exult-gimp-plugin. Someone should provide deb equivalents
	* mapedit/Makefile.am: install the GIMP plugin in the right place

2001-12-04  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Force created NPC's to start with neutral
	alignment.
	* usecode/ucinternal.cc (Usecode_function): Handle '*' in
	conversations to fix blank lines in 'Cosmo'.
	* effects.cc (Text_effect): Replace '@' with '"' instead of
	removing it.

2001-12-05  Patrick Burke  <takhisisii@yahoo.com.au>
        * usecode/ucxt : Removed a bug, added support for 'callis' and 'calli'

2001-12-04  Ryan Nunn <triforce@merlin.net.au>
	* files/crc.cc : Now actually works because it now actually reads files
	  as binary. Also did std namespace, and some casting.
	* msvcstuff/Exult.dsp, msvcstuff/expack.dsp, msvcstuff/msvc_kludges.h :
	  Added crc.cc/h where required

2001-12-03  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/barge.cc (Barge_object): Start motion with 1 tile for
	better control.
	* usecode/ucinternal.cc (public): Get_barge() checks to see that
	obj. is within the barge's footprint.  Also finds highest
	qualifying barge beneath obj.

2001-12-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: don't allow Npc_actor::remove_this to delete the NPC
	* contain.cc, objs.cc: catch possible (but unlikely) divisions by zero
	* files/crc.*, Makefile.*: CRC-32 algo
	* tools/expack.cc: compute CRC of resulting .flx file
	* exult.cc: check CRC of exult*.flx files
	* Spellbook_gump.cc: fixed reagents of BG 1st circle